--- a/templates/index.html
+++ b/templates/index.html
@@ -13,25 +13,14 @@
 		        <div class="row">
 		        	<div class="col-md-12">
 		        		<h2>Портал для инфраструктуры и новостей пространственных данных</h2>
-		        		<p>Следи за визуализацие пространственных данных и читай <br> последние новости </p>
+		        		<p>Следи за визуализацией пространственных данных и читай <br> последние новости </p>
 								<a href="{% url 'cities:city-list' %}"><button type="submit" class="btn btn-primary">Перейти</button></a>
 		        	</div> <!-- /.col-md-12 -->
 		        </div> <!-- /.row -->
 		    </div> <!-- /.container -->
 	    </div> <!-- /.parallax-overlay -->
 	</section> <!-- /#homeIntro -->
-<!--
-	<section class="cta clearfix">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h4 class="cta-title"><strong>Want to use Medigo?</strong> Go and download it on templatemo.com</h4>
-					<a href="#" class="main-button accent-color">Visit templatemo<i class="icon-button fa fa-arrow-right"></i></a>
-				</div> <!-- /.col-md-12 -->
-			<!-- </div> <!-- /.row -->
-		<!-- </div> <!-- /.container -->
-	<!-- </section> <!-- /.cta -->
-
+<
 	<section class="light-content services">
 		<div class="container">
 			<div class="row">
