--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -7,7 +7,7 @@
   <div class="col-6 ">
     <div class="card">
         <div class="card-body " >
-          <h2>Sign Up</h2>
+          <h2>Зарегистрироваться</h2>
           <form action="" method="post" novalidate>
             {% csrf_token %}
             {{ form|crispy }}
