--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -8,35 +8,18 @@
 	<title>{% block title %}  {% endblock %}</title>
     <meta name="keywords" content="">
 	<meta name="description" content="">
-    <meta name="author" content="templatemo">
-    <!--
-	Medigo Template
-	http://www.templatemo.com/preview/templatemo_460_medigo
-    -->
-
-	<!-- Google Fonts -->
 	<link href="http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700itali" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css?family=Raleway:400,900,800,700,500,200,100,600" rel="stylesheet">
 	<link rel="stylesheet" href="{% static 'css/misc.css' %}">
 	<link rel="stylesheet" href="{% static 'css/green-scheme.css' %}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css' %}">
-    <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-	<!-- JavaScripts -->
 	<script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
 	<script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}"></script>
 
-	<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
 
 </head>
 
@@ -53,8 +36,8 @@
             </li>
             <li><a href="#">Карта</a>
 				<ul>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Добавить карту</a></li>
+					<li><a href="{% url 'cities:city-list' %}">Каталог</a></li>
+					<li><a href="{% url 'cities:city-create' %}">Добавить карту</a></li>
                     <li><a href="#">Документация</a></li>
 				</ul>
             </li>
@@ -98,8 +81,8 @@
 					            </li>
 					            <li><a href="#">Карта</a>
 									<ul>
-										<li><a href="#">Каталог</a></li>
-										<li><a href="#">Добавить карту</a></li>
+										<li><a href="{% url 'cities:city-list' %}">Каталог</a></li>
+										<li><a href="{% url 'cities:city-create' %}">Добавить карту</a></li>
                     <li><a href="#">Документация</a></li>
 									</ul>
 					            </li>
@@ -116,21 +99,20 @@
 							</ul> <!-- /.sf-menu -->
 						</nav> <!-- /.main-nav -->
 
-						<!-- This one in here is responsive menu for tablet and mobiles -->
 					    <div class="responsive-navigation visible-sm visible-xs">
 					        <a href="#nogo" class="menu-toggle-btn">
 					            <i class="fa fa-bars"></i>
 					        </a>
-					    </div> <!-- /responsive_navigation -->
+					    </div> 
 
-					</div> <!-- /.main-navigation -->
+					</div> 
 
-				</div> <!-- /.col-md-12 -->
+				</div>
 
-			</div> <!-- /.row -->
+			</div>
 
-		</div> <!-- /.container -->
-	</header> <!-- /.site-header -->
+		</div> 
+	</header> 
 
 
 {% block content %}    {% endblock%}
@@ -164,7 +146,7 @@
 									<li><a href="{% url 'signup' %}">Регистрация</a></li>
 									<li><a href="{% url 'login' %}">Войти</a></li>
 							{% endif %}
-						</ul> <!-- /.footer-menu -->
+						</ul> 
 					</nav> <!-- /.footer-nav -->
 				</div> <!-- /.col-md-12 -->
 			</div> <!-- /.row -->
