--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -21,23 +21,21 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-8 blog-posts">
+			<div class="col-md-8 blog-posts" >
 				<div class="row">
 					<div class="col-md-12">
 						<div class="post-blog">
 							<div class="blog-image">
-								<img src="images/includes/blog2.jpg" alt="">
+								<img src="images/includes/blog2.jpg" style="margin-bottom: 100px;" alt="">
 							</div> <!-- /.blog-image -->
-							<div class="blog-content">
-								<span class="meta-date"><a href="#">24 February 2084</a></span>
-								<span class="meta-comments"><a href="#blog-comments">3 Comments</a></span>
-								<span class="meta-author"><a href="#blog-author">Candy Sharp</a></span>
+							<div class="blog-contents">
+								<span class="meta-date"><a href="#">25 Май 2019</a></span>
+								<span class="meta-comments"><a href="#blog-comments"> Comments {{objects.comments.count|upper}}</a></span>
+								<span class="meta-author"><a href="#blog-author">{{objects.owner}}</a></span>
 								<h3>{{ objects.title }}</h3>
                                     <p>{{ objects.description }}</p>
                                     <p>{{ objects.description }}</p>
-                                <!--<blockquote>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, quisquam, aut, eum, natus excepturi impedit ipsa rerum ratione id dolores ducimus minus eos quod veniam similique fugit illum error facilis!
-								</blockquote> -->
+                      
 								<p>
                                     Город: {{ objects.place_name }}
                                     <div id="map"></div>
@@ -47,9 +45,9 @@
                                     <a href="#" rel="tag">business</a>
                                     <a href="#" rel="tag">html</a>
                                     <a href="#" rel="tag">education</a>
-                                    {%  if user.is_authenticated %}
-                                    <td><a href="{% url "cities:post-update" objects.id %}">Update Post</a></td>
-                                    <td><a href="{% url "cities:post-delete" objects.id %}">Delete Post</a></td>
+                                    {%  if user.is_authenticated%}
+                                    <td><a href="{% url 'cities:post-update' objects.id %}">Редактировать пост</a></td>
+                                    <td><a href="{% url 'cities:post-delete' objects.id %}">Удалить пост</a></td>
 
                                     {% else %}
                                     {% endif %}
@@ -66,7 +64,7 @@
                             </a>
                             <div class="blog-author-info">
                                 <h4 class="author-name"><a href="#">{{ objects.owner|upper }}</a></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, quod, doloremque, quia cum maiores commodi consequatur dolore et dolores omnis officiis minus dolor ex quae incidunt veritatis.</p>
+                                <p>Я Дастан Алымбеков , житель этого городе и хотелось поделиться этой новостью</p>
                             </div>
                         </div>
 					</div> <!-- /.col-md-12 -->
@@ -74,24 +72,24 @@
 				<div class="row">
 					<div class="col-md-12">
                         <div id="blog-comments" class="blog-post-comments">
+													<a class="btn btn-default" href="{% url 'cities:add_comment_to_post' pk=objects.pk %}">Добавить комментарии</a>
 													{% for comment in objects.comments.all %}
-								            <h3>3 Comment</h3>
-                            <div class="blog-comments-content">
-                                <div class="media">
-                                    <div class="pull-left">
-                                        <img class="media-object" src="images/includes/comment1.jpg" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <div class="media-heading">
-                                        	<h4>{{comment.author}}</h4>
-                                        	<a href="#"><span>{{comment.created_date}}</span><span>Reply</span></a>
-                                        </div>
-                                        <p>{{comment.text}} Sequi, nam magni repellendus! i, nam magni repellendus! <span class="label label-primary">New</span></p>
-
-                                    </div>
-                                </div>
-
-														{% endfor %}
+													    {% if user.is_authenticated or comment.approved_comment %}
+													    <div class="comment">
+													        <div class="date">
+													            {{ comment.created_date }}
+													            {% if not comment.approved_comment %}
+													                <a class="btn btn-default" href="{% url 'cities:comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+													                <a class="btn btn-default" href="{% url 'cities:comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+													            {% endif %}
+													        </div>
+													        <strong>{{ comment.author }}</strong>
+													        <p>{{ comment.text|linebreaks }}</p>
+													    </div>
+													    {% endif %}
+													{% empty %}
+													    <p>Пока нет комментариев :(</p>
+													{% endfor %}
 
 													  </div> <!-- /.blog-comments-content -->
                         </div> <!-- /.blog-post-comments -->
@@ -100,127 +98,24 @@
 
 
 
-
-
-                            <h3>Leave a comment</h3>
-                            <div class="widget-inner">
-                            	<form action="#" method="post">
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <p>
-                                            <label for="name-id">Your Name:</label>
-                                            <input type="text" id="name-id" name="name-id">
-                                        </p>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <p>
-                                            <label for="email-id">Email Address:</label>
-                                            <input type="text" id="email-id" name="email-id">
-                                        </p>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <p>
-                                            <label for="site-id">Your Site:</label>
-                                            <input type="text" id="site-id" name="site-id">
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <p>
-                                            <label for="comment">Your comment:</label>
-                                            <textarea name="comment" id="comment" rows="5"></textarea>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input class="mainBtn" type="submit" name="submit" value="Submit Comment" id="submit">
-                                    </div>
-                                </div>
-                                </form>
                             </div> <!-- /.widget-inner -->
                         </div> <!-- /.widget-main -->
                     </div> <!-- /.col-md-12 -->
                 </div> <!-- /.row -->
 			</div> <!-- /.col-md-8 -->
 
-			<div class="col-md-4">
-				<div class="sidebar">
-					<div class="sidebar-widget">
-						<h5 class="widget-title">Recent Posts</h5>
-						<div class="last-post clearfix">
-							<div class="thumb pull-left">
-								<a href="#"><img src="images/includes/blogthumb1.jpg" alt=""></a>
-							</div>
-							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
-							</div>
-						</div> <!-- /.last-post -->
-						<div class="last-post clearfix">
-							<div class="thumb pull-left">
-								<a href="#"><img src="images/includes/blogthumb2.jpg" alt=""></a>
-							</div>
-							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
-							</div>
-						</div> <!-- /.last-post -->
-						<div class="last-post clearfix">
-							<div class="thumb pull-left">
-								<a href="#"><img src="images/includes/blogthumb3.jpg" alt=""></a>
-							</div>
-							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
-							</div>
-						</div> <!-- /.last-post -->
-					</div> <!-- /.sidebar-widget -->
-					<div class="sidebar-widget">
-						<h5 class="widget-title">Categories</h5>
-						<div class="row categories">
-							<div class="col-md-6">
-								<ul>
-									<li><a href="#">Standard</a></li>
-									<li><a href="#">Audio</a></li>
-									<li><a href="#">Video</a></li>
-									<li><a href="#">Branding</a></li>
-								</ul>
-							</div>
-							<div class="col-md-6">
-								<ul>
-									<li><a href="#">iOS Design</a></li>
-									<li><a href="#">Business</a></li>
-								</ul>
-							</div>
-						</div> <!-- /.row -->
-					</div> <!-- /.sidebar-widget -->
-					<div class="sidebar-widget">
-						<h5 class="widget-title">Flickr Feed</h5>
-						<ul id="flickr-feed" class="thumbs"></ul>
-					</div> <!-- /.sidebar-widget -->
-					<div class="sidebar-widget">
-						<h5 class="widget-title">Text Widget</h5>
-						<p class="light-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cum sociis natoque penatibus et magnis dis parturient… </p>
-					</div> <!-- /.sidebar-widget -->
-				</div> <!-- /.sidebar -->
-			</div> <!-- /.col-md-4 -->
+
 
 		</div> <!-- /.row -->
 	</div> <!-- /.container -->
         <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
+
       #map {
         height: 300px;
       }
     </style>
     <script>
-      // This example requires the Places library. Include the libraries=places
-      // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
+    
       var map;
       var service;
       var infowindow;
