--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,8 +23,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="contact-wrapper">
-							<h3>Get In Touch With Us</h3>
-							<p>Nihil, aperiam, ad molestiae ut enim reprehenderit rem repudiandae ducimus dolorum obcaecati rerum accusamus provident atque eos cum. Reiciendis, modi, sint, vel, eligendi veniam esse qui quasi voluptas recusandae eum accusamus error animi expedita amet rem ad quos.</p>
+							<h3>Свяжись с нами !</h3>
+							<p>Отправь нам заявку или же можешь позвонить по определенным номерам, если хочешь стать нашим партнером или работать у нас то мы ждём именно тебя </p>
 							<div class="contact-map">
 			                    <div class="google-map-canvas" id="map-canvas" style="height: 320px;">
 			                    </div>
@@ -35,25 +35,25 @@
 				<div class="row">
                     <div class="col-md-12">
                         <div class="contact-form">
-                            <h3>Send a Direct Message</h3>
+                            <h3>Отправь нам сообщение</h3>
 	                        <div class="widget-inner">
                             <form action="#" method="post" id="contact-form">
                                 <div class="row">
                                     <div class="col-md-4">
                                         <p>
-                                            <label for="name">Your Name:</label>
+                                            <label for="name">Ваше имя:</label>
                                             <input type="text" name="name" id="name">
                                         </p>
                                     </div>
                                     <div class="col-md-4">
                                         <p>
-                                            <label for="email">Email Address:</label>
+                                            <label for="email">Email адресс:</label>
                                              <input type="text" name="email" id="email">
                                         </p>
                                     </div>
                                     <div class="col-md-4">
                                         <p>
-                                            <label for="subject">Subject:</label>
+                                            <label for="subject">Предмет:</label>
                                              <input type="text" name="subject" id="subject">
                                         </p>
                                     </div>
@@ -61,14 +61,14 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <p>
-                                            <label for="message">Your message:</label>
+                                            <label for="message">Ваше сообщение:</label>
                                             <textarea name="message" id="message"></textarea>
                                         </p>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <button class="mainBtn" id="submit">Send Message</button>
+                                        <button class="mainBtn" id="submit">Отправить заявку</button>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -86,14 +86,14 @@
 			<div class="col-md-4">
 				<div class="sidebar">
 					<div class="sidebar-widget">
-						<h5 class="widget-title">Recent Posts</h5>
+						<h5 class="widget-title">Недавние Посты</h5>
 						<div class="last-post clearfix">
 							<div class="thumb pull-left">
 								<a href="#"><img src="images/includes/blogthumb1.jpg" alt=""></a>
 							</div>
 							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
+								<span>24 мая  2019</span>
+								<h4><a href="#">Оползневая  опастность</a></h4>
 							</div>
 						</div> <!-- /.last-post -->
 						<div class="last-post clearfix">
@@ -101,8 +101,8 @@
 								<a href="#"><img src="images/includes/blogthumb2.jpg" alt=""></a>
 							</div>
 							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
+								<span>25 мая 2019</span>
+								<h4><a href="#">Сильная ливень в нарыне</a></h4>
 							</div>
 						</div> <!-- /.last-post -->
 						<div class="last-post clearfix">
@@ -110,37 +110,37 @@
 								<a href="#"><img src="images/includes/blogthumb3.jpg" alt=""></a>
 							</div>
 							<div class="content">
-								<span>24 February 2084</span>
-								<h4><a href="#">Standard Post Formating Medigo</a></h4>
+								<span>25 мая 2019 </span>
+								<h4><a href="#">Дожди в окрайнах города</a></h4>
 							</div>
 						</div> <!-- /.last-post -->
 					</div> <!-- /.sidebar-widget -->
 					<div class="sidebar-widget">
-						<h5 class="widget-title">Categories</h5>
+						<h5 class="widget-title">Категории</h5>
 						<div class="row categories">
 							<div class="col-md-6">
 								<ul>
-									<li><a href="#">Standard</a></li>
-									<li><a href="#">Audio</a></li>
-									<li><a href="#">Video</a></li>
-									<li><a href="#">Branding</a></li>
+									<li><a href="#">Стандартные</a></li>
+									<li><a href="#">Катастрофы</a></li>
+									<li><a href="#">Ливень</a></li>
+									<li><a href="#">Карты</a></li>
 								</ul>
 							</div>
 							<div class="col-md-6">
 								<ul>
-									<li><a href="#">iOS Design</a></li>
-									<li><a href="#">Business</a></li>
+									<li><a href="#"></a></li>
+									<li><a href="#"></a></li>
 								</ul>
 							</div>
 						</div> <!-- /.row -->
 					</div> <!-- /.sidebar-widget -->
 					<div class="sidebar-widget">
-						<h5 class="widget-title">Flickr Feed</h5>
+						<h5 class="widget-title">Категории</h5>
 						<ul id="flickr-feed" class="thumbs"></ul>
 					</div> <!-- /.sidebar-widget -->
 					<div class="sidebar-widget">
-						<h5 class="widget-title">Text Widget</h5>
-						<p class="light-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cum sociis natoque penatibus et magnis dis parturient… </p>
+						<h5 class="widget-title">Текст</h5>
+						<!-- <p class="light-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cum sociis natoque penatibus et magnis dis parturient… </!--> 
 					</div> <!-- /.sidebar-widget -->
 				</div> <!-- /.sidebar -->
 			</div> <!-- /.col-md-4 -->
