--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -8,221 +8,26 @@
 			<div class="container pageTitle">
 				<div class="row">
 					<div class="col-md-6 col-sm-6">
-						<h2 class="page-title">Our Portfolio</h2>
+						<h2 class="page-title">Наша компания</h2>
 					</div> <!-- /.col-md-6 -->
 					<div class="col-md-6 col-sm-6 text-right">
-						<span class="page-location">Home / Portfolio</span>
+						<span class="page-location">Главная / О нас/ Наша компания</span>
 					</div> <!-- /.col-md-6 -->
 				</div> <!-- /.row -->
 			</div> <!-- /.container -->
 		</div> <!-- /.parallax-overlay -->
-	</div> <!-- /.pageTitle -->
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<ul id="filters" class="mixitup-controls">
-					<li class="filter" data-filter="all">All</li>
-					<li class="filter" data-filter="branding">Branding</li>
-					<li class="filter" data-filter="illustration">Illustration</li>
-					<li class="filter" data-filter="business">Business</li>
-					<li class="filter" data-filter="identity">Identity</li>
-				</ul>
-			</div> <!-- /.col-md-12 -->
-		</div> <!-- /.row -->
-	</div> <!-- /.container -->
-
-	<div class="container">
-		<div class="row">
-			<div class="portfolio-holder" id="Grid">
-				<div class="portfolio-post col-sm-6 col-md-4 mix illustration">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Illustration</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Visual Admin</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project1.jpg' %}" title="Visual Admin">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project1.jpg' %}" alt="Visual Admin">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix branding">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Branding</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Compass Template</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="i{% static 'images/includes/project2.jpg'%}" title="Compass Template">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project2.jpg' %}" alt="Compass Template">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix illustration">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Illustration</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Awesome Theme</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project3.jpg' %}" title="Awesome Theme">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="images/includes/project3.jpg" alt="Awesome Theme">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix illustration">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Illustration</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Volton Personal Site</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project4.jpg' %}" title="Volton Personal Site">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project4.jpg' %}" alt="Volton Personal Site">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix business">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Business</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Rectangle Design</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project5.jpg' %}" title="Rectangle Design">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project5.jpg" alt="Rectangle Design">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix branding">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Branding</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Masonry Gallery</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project6.jpg' %}" title="Masonry Gallery">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project6.jpg' %}" alt="Masonry Gallery">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix branding identity">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Branding / Identity</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Gloss Template</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project7.jpg' %}" title="Gloss Template">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project7.jpg' %}" alt="Gloss Template">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix identity illustration">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Identity / Illustration</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Ion Template</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project8.jpg' %}" title="Ion Template">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project8.jpg' %}" alt="Ion Template">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-				<div class="portfolio-post col-sm-6 col-md-4 mix branding">
-					<div class="thumb-post">
-						<div class="overlay">
-                            <div class="overlay-inner">
-                                <div class="portfolio-infos">
-                                    <span class="meta-category">Branding</span>
-                                    <h3 class="portfolio-title"><a href="project-slideshow.html">Freshness</a></h3>
-                                </div>
-                                <div class="portfolio-expand">
-                                    <a class="fancybox" href="{% static 'images/includes/project9.jpg' %}" title="Freshness">
-                                        <i class="fa fa-expand"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="{% static 'images/includes/project9.jpg' %}" alt="Freshness">
-					</div>
-				</div> <!-- /.col-md-4 -->
-
-			</div> <!-- /.portfolio-holder -->
-		</div> <!-- /.row -->
-	</div> <!-- /.container -->
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<ul class="pages">
-					<li><a href="#" class="active">1</a></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">...</a></li>
-					<li><a href="#">13</a></li>
-				</ul>
-			</div> <!-- /.col-md-12 -->
-		</div> <!-- /.row -->
-	</div> <!-- /.container -->
+    </div> <!-- /.pageTitle -->
+    
+    <div style="display: flex; justify-content: center; ">
+    <p style="font-size: 22px; width: 700px;text-align:left;  margin-top: 50px; margin-bottom: 50px;">
+        Мы являемся действительно независимой компанией, специализирующейся исключительно на предоставлении услуг по инфраструктуре и показу новостей пространственных данных. С момента создания, т.е. с 2019 года, 
+        мы наработали некоторые деловые отношения с различными пользователями – 
+        от небольших до крупных – благодаря своему профессионализму, 
+        опыту и способности использовать возможности экономии затрат на пользу клиентам. 
+        2019 года компания Геопортал стала частью ТТТТ – успешного поставщика услуг в сфере 
+        инфраструктуры пространственных данных
+    </p>
+    </div>
 
 
 {% endblock %}
