--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,12 +7,12 @@
   <div class="col-6 ">
     <div class="card">
         <div class="card-body">
-          <h2>Log in</h2>
+          <h2>Войти</h2>
           <form action="" method="post" novalidate>
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Log in</button>
-              <a href="{% url 'password_reset' %}" class="btn btn-link"> Forgot your password ?</a>
+            <button type="submit" class="btn btn-primary">Войти</button>
+              <a href="{% url 'password_reset' %}" class="btn btn-link"> Забыли пароль ?</a>
           </form>
       </div>
 
